# iDoft_retriever

./: .gitignore  README.md  divide.py  plot.py  pyproject.toml  retrieve.py  test.csv
csv/: gr-data.csv  new-gr-data.csv  new-pr-data.csv  new-py-data.csv  pr-data.csv  py-data.csv
